--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
+    "@nuxt/types": "~2.14.0",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "babel-eslint": "^10.1.0",
